[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/rock.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/img/space_background_2.jpg" type="Texture" id=3]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.412003, -0.319649, 0, 0, 0, 0, 1021.41, -0.319649, 0, 0, 0, 0, 1022.99, 599.443, 0, 0, 0, 0, -1.99867, 596.27, 0, 0, 0, 0, -0.412003, -0.319649 )
}

[node name="main" type="Node"]
script = ExtResource( 1 )
rock = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 539.541, 303.136 )
texture = ExtResource( 3 )

[node name="player" parent="." instance=ExtResource( 4 )]
position = Vector2( 512, 300 )

[node name="rocks_path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="rocks_spawn" type="PathFollow2D" parent="rocks_path"]
position = Vector2( -0.412003, -0.319649 )
rotation = -7.61578e-009

[node name="rocks" type="Node" parent="."]
[connection signal="shoot" from="player" to="." method="_on_player_shoot"]
